	Fixed bug where the legacyoutput plugin would use inline styles for font color.
	Fixed bug where editing of anchor names wouldn't produce an undo level.
	Fixed bug where the table plugin would delete the last empty block element in the editor.
	Fixed bug where pasting table rows when they where selected would make it impossible to editor that table row.
	Removed summary from HTML5 table attributes and fixed so this and other deprecated table fields gets hidden in the table dialog.
Version 3.5.1.1 (2012-05-25)
	Fixed bug with control creation where plugin specific controls didn't work as expected.
Version 3.5.1 (2012-05-25)
	Added new onBeforeAdd event to UndoManager patch contributed by Dan Rumney.
	Added support for overriding the theme rendering logic by using a custom function.
	Fixed bug where links wasn't automatically created by the autolink plugin on old IE versions when pressing enter in BR mode.
	Fixed bug where enter on older IE versions wouldn't produce a new paragraph if the previous sibling paragraph was empty.
	Fixed bug where toString on a faked DOM range on older IE versions wouldn't return a proper string.
	Fixed bug where named anchors wouldn't work properly when schema was set to HTML5.
	Fixed bug where HTML5 datalist options wasn't correctly parsed or indented.
	Fixed bug where linking would add anchors around block elements when the HTML5 schema was used.
	Fixed issue where the autolink plugin wouldn't properly handle mailto:user@domain.com.
	Optimized initialization and reduced rendering flicker by hiding the target element while initializing.
Version 3.5.0.1 (2012-05-10)
	Fixed bug where selection normalization logic would break the selections of parent elements using the element path.
	Fixed bug where the autolink plugin would include trailing dots in domain names in the link creation.
	Fixed bug where the autolink plugin would produce an error on older IE versions when pressing enter.