@@ -13,6 +13,7 @@ Version 3.5.x (2012-xx-xx)
 	Fixed bug where editing of anchor names wouldn't produce an undo level.
 	Fixed bug where the table plugin would delete the last empty block element in the editor.
 	Fixed bug where pasting table rows when they where selected would make it impossible to editor that table row.
+	Fixed bug with pressing enter in IE while having a select list focused would produce a JS error.
 	Removed summary from HTML5 table attributes and fixed so this and other deprecated table fields gets hidden in the table dialog.
 Version 3.5.1.1 (2012-05-25)
 	Fixed bug with control creation where plugin specific controls didn't work as expected.
